--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,136 @@
+:root {
+  --primary-color:#04ADBF;
+  --secund-color:#23C8B2;
+  --color-dark:#025E73;
+  --light-grey: #acb8b4;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+  /* overflow: hidden */
+  background-image: linear-gradient(to bottom, #23C8B2, #fff);
+}
+
+body div {
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center; 
+  height: 100%;
+  
+
+}
+
+.createTask {
+  background: white;
+  box-shadow: 2px 2px 2px #eee;
+  width: 35%;
+  height: 80%;
+  padding: 50px 30px;
+  border-radius: 10px;
+  color: var(--color-dark);
+  background-image: url(../src/img/background.png);
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100%;
+}
+
+.createTask h2 {
+  color: var(--color-dark);
+}
+
+.createTask div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.createTask input {
+  padding: 8px 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+.createTask button {
+  width: 120px;
+  color: #fff;
+  background-color: var(--primary-color);
+  padding: 5px;
+  border: 0px;
+  border-radius: 8px;
+}
+
+
+.taskContainer {
+  width: 45%;
+
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding: 30px 30px;
+  gap: 10px;
+}
+
+.todoCounter{
+  height: auto;
+  text-align: center;
+}
+
+.todoCounter h2 {
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+
+.todoCounter p {
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin: 0px;
+}
+
+.todoSearch {
+  margin-top: 10px;
+  height: auto;
+  text-align: center;
+}
+
+.todoSearch input {
+  width: 60%;
+  padding: 10px 15px;
+  border-radius: 8px;
+  border: none;
+  color: #5d5e5e;
+}
+
+.taskList {
+  list-style: none;
+  padding: 0px;
+}
+
+.taskList li {
+  background: white;
+  margin: 10px 0px;
+  border-radius: 8px;
+  padding: 5px;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  box-shadow: 2px 2px 2px #649494 ;
+}
+
+.taskList p {
+  width: 85%;
+}
 
