--- a/src/index.css
+++ b/src/index.css
@@ -140,3 +140,39 @@ body div {
 }
 
 
+/* Estilo para el modal */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.8s ease;
+}
+
+/* Estilo para el contenido del modal */
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  max-width: 400px;
+  width: 100%;
+  max-height: 300px;
+}
+
+/* Estilo para el título del modal */
+.modal-content h2 {
+  margin-top: 0;
+}
+
+/* Estilo para el cuerpo del modal */
+.modal-content p {
+  margin-bottom: 0;
+}
+
+
